--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.2",
+    "babel-plugin-styled-components": "^2.1.4",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-imask": "^7.6.1",
     "react-router-dom": "5.1.2",
     "styled-components": "^6.1.11"
   },
