feat: add some of the necessary mutations, add initial state handling to cards

--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.15",
+    "@mui/material": "^6.1.0",
+    "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@6.1.0",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
@@ -21,7 +26,10 @@
     "react-icons": "^5.2.1",
     "react-imask": "^7.6.1",
     "react-router-dom": "5.1.2",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.13"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@6.1.0"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
@@ -31,6 +39,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
