--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
 
     "baseUrl": "./src",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     }
   },
   "include": ["src"],
