--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-imask": "^7.6.1",
     "react-router-dom": "5.1.2",
