--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fontsource/roboto": "^5.0.15",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@6.1.0",
+    "@mui/x-date-pickers": "^7.16.0",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "dayjs": "^1.11.13",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
