--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "dayjs": "^1.11.13",
     "json-server": "^1.0.0-beta.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
@@ -39,6 +40,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "13.0.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "^5.3.3",
