--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "init:db": "json-server --watch db.json",
     "build": "tsc && vite build",
+    "test": "vitest",
     "test:dev": "jest --watch --verbose --no-cache",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -21,6 +22,7 @@
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@6.1.0",
     "@mui/x-date-pickers": "^7.16.0",
     "@tanstack/react-query": "^5.55.4",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
     "dayjs": "^1.11.13",
@@ -39,8 +41,8 @@
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "13.0.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^13.0.0",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.66",
@@ -60,9 +62,11 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "msw": "^2.4.6",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^2.1.1"
   }
 }
