--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "paths": {
       "~/*": ["./*"],
       "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
-    }
+    },
+    "types": ["vitest/globals"],
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
