--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^2.1.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
