--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "caju-front-test-1",
+  "name": "caju-frontend-test",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
