--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.15",
+    "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "npm:@mui/styled-engine-sc@6.1.0",
     "@mui/x-date-pickers": "^7.16.0",
